# multiLLMc

./: .gitignore  README.md  README_CN.md  init.json  init2.json  init2_1.json  init2_2.json  init2_tem0.json  pyproject.toml
examples/: basic_annotation.py  full_workflow.py  markers.json
mllmcelltype/: __init__.py  _core.py  _promopt.py  _provider.py  cli.py  harmonizer.py  reviewer.py  seminar.py  utils.py
mllmcelltype_simple/: _core.py  _provider.py  harmonizer.py  reviewer.py  seminar.py  test.py  utils.py
mllmcelltype_simple/h5ad/: get_gene.py
tests/: results_viewer.html  sample_results.py  test_basic.py  test_full.py  test_markers.py  test_results.json  test_simple.py
