[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiLLMc"
version = "0.1.0"
description = "Multi-LLM Collaborative Cell Type Annotation for Single-Cell RNA-seq"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "51cat", email = "your.email@example.com"}
]
maintainers = [
    {name = "51cat", email = "your.email@example.com"}
]
keywords = [
    "single-cell",
    "rna-seq", 
    "cell-type-annotation",
    "llm",
    "bioinformatics",
    "multi-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
scanpy = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
]

[project.scripts]
multillmc = "mllmcelltype.cli:main"

[project.urls]
Homepage = "https://github.com/51cat/multiLLMc"
Documentation = "https://github.com/51cat/multiLLMc#readme"
Repository = "https://github.com/51cat/multiLLMc.git"
Issues = "https://github.com/51cat/multiLLMc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mllmcelltype*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
